# openchatci

./: .gitignore  LICENSE.md  README.md
backend/: .env.sample  log_conf.yaml  mcp_servers.sample.json  pyproject.toml  ruff.toml
backend/src/app/: cli.py  main.py
backend/src/app/agui/: agent_factory.py  agent_registry.py  endpoint.py
backend/src/app/auth/: __init__.py  middleware.py  provider.py  tenant.py
backend/src/app/cli/: __init__.py  chat.py  client.py  main.py  models.py  sessions.py  templates.py  tts.py  upload.py
backend/src/app/coding/: security.py  tools.py
backend/src/app/core/: config.py
backend/src/app/devui/: launcher.py
backend/src/app/image_gen/: router.py  tools.py
backend/src/app/mcp/: config.py  lifecycle.py  provider.py
backend/src/app/mcp_apps/: manager.py  router.py  sandbox.py
backend/src/app/mcp_batch/: __init__.py  models.py  queue.py  server.py  storage.py
backend/src/app/mcp_batch/jobs/: __init__.py  rag_ingest.py  sleep.py
backend/src/app/mcp_batch/rag/: __init__.py  chunker.py  (+2 more)
backend/src/app/openai_api/: __init__.py  auth.py  converter.py  models.py  router.py  session.py
backend/src/app/prompt_templates/: models.py  router.py  storage.py
backend/src/app/rag/: __init__.py  tools.py
backend/src/app/session/: provider.py  router.py  storage.py
backend/src/app/skills/: provider.py
backend/src/app/stt/: provider.py  router.py  whisper.py
backend/src/app/tts/: elevenlabs.py  provider.py  router.py
backend/src/app/upload/: router.py  validation.py
backend/src/app/weather/: models.py  tools.py
(+59 files in other folders)
