[project]
name = "openchatci"
version = "0.25.0"
description = "Hawaii-built localhost-first AI agent platform powered by Microsoft Agent Framework."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Jingun Jung" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "agent-framework>=1.0.0rc2",
    "agent-framework-ag-ui>=1.0.0b0",
    "agent-framework-devui>=1.0.0b0",
    "azure-identity>=1.23.0",
    "httpx>=0.28.0",
    "elevenlabs>=2.39.0",
]

[project.urls]
Homepage = "https://github.com/motojinc25/openchatci"
Repository = "https://github.com/motojinc25/openchatci"
Issues = "https://github.com/motojinc25/openchatci/issues"

[project.scripts]
openchatci = "app.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["_frontend_dist/**/*", "_frontend_dist/*", "templates/.env.template"]

[dependency-groups]
dev = ["ruff>=0.15.5", "pytest>=8.3.0", "pytest-asyncio>=1.0.0"]
